[build-system]

requires = ["setuptools>=42", "wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "{{application_name}}"
version = "0.0.1"
dependencies = [
    # TODO remove the local path later
    "bl-python-database@ file:///home/aholmes/repos/private-BL-python-libraries/src/database",
    "bl-python-web@ file:///home/aholmes/repos/private-BL-python-libraries/src/web",
    "bl-python-programming@ file:///home/aholmes/repos/private-BL-python-libraries/src/programming",
    #"bl-python-web@ git+ssh://git@github.com/uclahs-cds/private-BL-python-libraries.git@aholmes-add-web#subdirectory=src/web",

    #"bl-python @ git+ssh://git@github.com/uclahs-cds/private-BL-python-libraries.git@aholmes-rework-builds",
    #"bl-python-platform@ git+ssh://git@github.com/uclahs-cds/private-BL-python-libraries.git@main#subdirectory=src/platform",
    #"bl-python-database@ git+ssh://git@github.com/uclahs-cds/private-BL-python-libraries.git@main#subdirectory=src/database",
    #"bl-python-programming@ git+ssh://git@github.com/uclahs-cds/private-BL-python-libraries.git@main#subdirectory=src/programming",
]

[tool.pyright]
exclude = [
    ".venv",
    ".pytest_cache",
    ".github",
    ".git",
    "typings",
    "**/node_modules",
    "**/__pycache__",
]
typeCheckingMode = "basic"